# street-canyon-lbm

./: .gitignore  CLAUDE.md  DECISIONS.md  LICENSE  Makefile  PROGRESS.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  canyon_demo.yaml  sweep_aspect_ratio.yaml  validation_codasc.yaml
data/validation/: README.md
paper/: README.md  results_limitations_framing.md
results/: pe_sensitivity.summary.csv  phase6_5_peclet.summary.csv  phase6_5b_peclet.summary.csv  sweep_aspect_ratio.summary.csv
scripts/: diagnose_unsteadiness.py  grid_independence.py  make_figures.py  pe_sensitivity.py  phase6_5_peclet.py  phase6_5b_peclet.py  phase6_5c_mrt_test.py  run_case.py  run_sweep.py  validate_codasc.py
src/canyon_lbm/: __init__.py  backend.py  boundary.py  geometry.py  io.py  lattice.py  metrics.py  scalar.py  solver.py  viz.py
tests/: test_backend.py  test_boundary.py  test_canyon.py  test_geometry.py  test_lattice.py  test_metrics.py  test_poiseuille.py  test_scalar.py
