[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "canyon-lbm"
version = "0.1.0"
description = "2D D2Q9 lattice-Boltzmann street-canyon ventilation study"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
# Exact, pinned versions live in requirements.txt for reproducibility; these are
# the loose runtime deps for packaging/editable install.
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest"]
# GPU backend (optional): requires a CUDA-capable GPU + driver. Selected at
# runtime via CANYON_LBM_BACKEND=cupy. NumPy remains the validated reference.
accel = ["cupy-cuda12x"]
viz3d = ["pyvista"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
src = ["src", "scripts", "tests"]
